<resources>
    <string name="app_name">OsonBusiness</string>
    <string name="action_settings">История</string>
    <string name="settings">Настройки</string>
    <string name="base_check_holder">Чек %1$d</string>
    <string name="base_bill_holder">Счет %1$d</string>
    <string name="activity_select_language_title">Выбор языка</string>
    <string name="activity_select_language_hint">Выберите ваш язык</string>
    <string name="activity_select_language_russian">Русский</string>
    <string name="activity_select_language_uzbek">Узбекский</string>
    <string name="activity_select_language_english">английский</string>
    <string name="authorization_title">Авторизация</string>
    <string name="activity_authorization_input_login_hint">Логин</string>
    <string name="activity_authorization_input_password_hint">Пароль</string>
    <string name="activity_authorization_save_password_title">Сохранить пароль</string>
    <string name="activity_authorization_login_button_title">Войти</string>
    <string name="activity_authorization_registration_button_title">Зарегитсрироваться</string>
    <string name="activity_authorization_forgot_password_button_title">Забыли праоль?</string>
    <string name="activity_registration_title">Регистрация</string>
    <string name="activity_registration_input_company_name_hint">Название компании</string>
    <string name="activity_registration_input_settlement_account_hint">Расчетный счет</string>
    <string name="activity_registration_input_vatin_hint">ИНН</string>
    <string name="activity_registration_input_login_hint">Логин</string>
    <string name="activity_registration_input_password_hint">Пароль</string>
    <string name="activity_registration_input_confirm_password_hint">Повторите пароль</string>
    <string name="activity_registration_continue_button_hint">Продолжить</string>
    <string name="dialogfragment_error_network_connection_title">Ошибка сети</string>
    <string name="dialogfragment_error_network_connection_message">Невозможно подключиться к серверу. Пожалуйста проверьте интернет соединение и повторите попытку.</string>
    <string name="dialogfragment_error_unknown_title">Неизвестная ошибка</string>
    <string name="dialogfragment_error_unknown_message">Произошла неизвестная ошибка, пожалуйста, попробуйте попытку позже.</string>
    <string name="dialogfragment_authorization_unknown_error_during_load_title">Неизвестная оибка</string>
    <string name="dialogfragment_authorization_unknown_error_during_load_message">Произошла неизвестная ошибка во время загрузки, пожалуйста, попробуйте попытку позже.</string>
    <string name="dialogfragment_registration_company_name_empty">Имя компании не может быть пустым</string>
    <string name="dialogfragment_registration_settlement_account_wrong_length">Недопустимая длина расчетного счета</string>
    <string name="dialogfragment_registration_vatid_wrong_length">Недопустимая длина номера ИНН</string>
    <string name="dialogfragment_registration_login_empty">Логин не может быть пустым</string>
    <string name="dialogfragment_registration_password_empty">Пароль не может быть пустым</string>
    <string name="dialogfragment_registration_confirm_password_empty">Повторный пароль не может быть пуст</string>
    <string name="dialogfragment_registration_confirm_password_not_equals">Повторный пароль не соответствует введенному паролю выше</string>
    <string name="dialogfragment_main_filter_action_on_loading_title">Загрузка</string>
    <string name="dialogfragment_main_filter_action_on_loading_bill_message">Пожалуйста, дождитесь окончания загрузки счетов</string>
    <string name="dialogfragment_main_filter_action_on_loading_purchase_message">Please, wait loading of a purchase list</string>
    <string name="dialogfragment_main_filter_action_on_empty_title">Список пуст</string>
    <string name="dialogfragment_main_filter_action_on_empty_message">Невозможно сделать фильтрацию пустого списка</string>
    <string name="dialogfragment_main_filter_action_on_error_title">Ошибка</string>
    <string name="dialogfragment_main_filter_action_on_error_message">Пожалуйста загрузите данные и попробуйте еще раз</string>
    <string name="dialogfragment_main_bill_request_phonenumber_empty">Номер телефона должен быть равен 13 числам</string>
    <string name="dialogfragment_main_bill_request_sum_empty">Сумма не может быть пуста</string>
    <string name="dialogfragment_main_bill_request_sum_must_be_more">Сумма должна быть больше %1$s</string>
    <string name="dialogfragment_main_bill_request_sum_must_be_less">Сумма должна быть меньше %1$s</string>
    <string name="dialogfragment_main_bill_request_comment_empty">Комментарий не должен быть пуст</string>
    <string name="dialogfragment_main_bill_request_data_nulled">Пожалуйста, включите NFC в настройках устройства</string>
    <string name="dialogfragment_main_bill_request_nfc_disabled">Пожалуйста, включите NFC в настройках устройства</string>
    <string name="dialogfragment_main_bill_request_android_beam_disabled">Пожалуйста, включите Android Beam в настройках, чтобы соединиться с другим Android устройством</string>
    <string name="dialogfragment_main_bill_request_post_success_title">Успешно</string>
    <string name="dialogfragment_main_bill_request_post_success_message_with_nfc">Запрос был успешно отправлен %1$s. Также, вы можете отправить данные о счете по Qr-коду или NFC.</string>
    <string name="dialogfragment_main_bill_request_post_success_message_without_nfc">Запрос был успешно отправлен %1$s. Также, вы можете отправить данные о счете по Qr-коду.</string>
    <string name="dialogfragment_main_bill_request_post_success_message_sended_ndefmessage_nfc">Данные были успешно переданы по NFC.</string>
    <string name="dialogfragment_main_bill_request_post_phonenumber_not_found_title">Ошибка</string>
    <string name="dialogfragment_main_bill_request_post_phonenumber_not_found_message">Введенный номер телефона не найден в системе, пожалуйста, введите другой.</string>
    <string name="dialogfragment_main_bill_request_generated_qrcode_title">Для оплаты счета наведите\nкамеру телефона на QR код</string>
    <string name="dialogfragment_main_bill_request_generated_ndefmessage_title">Для оплаты счета поднесите\nтелефон с NFC модулем</string>
    <string name="dialogfragment_main_purchase_request_field_empty">Пожалуйста введите %1$s</string>
    <string name="dialogfragment_main_purchase_request_field_incorrect_phonenumber">Пожалуйста выберите верный номер телефона</string>
    <string name="dialogfragment_main_purchase_request_cardnumber_empty">Номер карты не может быть пуст</string>
    <string name="dialogfragment_main_purchase_request_cardnumber_wrong_length">Номер карты должен быть равен 16 символам</string>
    <string name="dialogfragment_main_purchase_request_card_expiration_date_empty">Срок действия карты не может быть пустым</string>
    <string name="dialogfragment_main_purchase_request_card_expiration_date_wrong_length">Срок действия карты должен быть равен 4 символам</string>
    <string name="dialogfragment_main_purchase_request_amount_empty">Сумма не может быть пуста</string>
    <string name="dialogfragment_main_purchase_request_amount_wrong_min_amount_uzs">Сумма должна быть больше %1$s сум</string>
    <string name="dialogfragment_main_purchase_request_amount_wrong_max_amount_uzs">Сумма должна быть меньше %1$s сум</string>
    <string name="dialogfragment_main_purchase_request_amount_wrong_min_amount_usd">Сумма должна быть больше $%1$s</string>
    <string name="dialogfragment_main_purchase_request_amount_wrong_max_amount_usd">Сумма должна быть меньше $%1$s</string>
    <string name="dialogfragment_main_purchase_request_wrong_fields">Неверные введенные данные, пожалуйста проверьте их верность</string>
    <string name="dialogfragment_main_purchase_request_card_not_found">Карта не найдена, пожалуйста проверьте правильность введенного номера карты</string>
    <string name="dialogfragment_main_purchase_request_confirmation_wrong_smscode">Неверный SMS код, пожалуйста проверьте правильность ввода</string>
    <string name="dialogfragment_main_purchase_request_confirmation_not_enough_amount">Недосаточно средств для совершения оплаты на введенной карте, пожалуйста введите другой номер карты</string>
    <string name="dialogfragment_main_purchase_request_confirmation_success_title">Оплата совершена</string>
    <string name="dialogfragment_main_purchase_request_confirmation_success_message">Оплата была успешно совершена</string>
    <string name="dialogfragment_main_purchase_request_confirmation_unknown_error_title">Неизвестная ошибка</string>
    <string name="dialogfragment_main_purchase_request_confirmation_unknown_error_message">Произошла неизвестная ошибка, пожалуйста попробуйте попытку позже</string>
    <string name="dialogfragment_main_purchase_request_waiting_smscode_title">Подтверждение</string>
    <string name="dialogfragment_main_purchase_request_waiting_smscode_message">Пожалуйста введите SMS-код, который был отправлен на номер %1$s</string>
    <string name="dialogfragment_main_purchase_request_waiting_smscode_hint">SMS-код</string>
    <string name="dialogfragment_main_purchase_request_waiting_smscode_empty">SMS-код не может быть пустым</string>
    <string name="dialogfragment_main_bill_purchase_filter_choose_merchant_title">Выберите поставщика</string>
    <string name="dialogfragment_main_bill_purchase_filter_choose_phonenumber_title">Выбор номера телефона</string>
    <string name="dialogfragment_main_bill_purchase_filter_choose_phonenumber_tap_to_select_hint">Нажмите, чтобы выбрать</string>
    <string name="dialogfragment_main_bill_purchase_filter_choose_date_from_title">Выбор начала даты фильтрации</string>
    <string name="dialogfragment_main_bill_purchase_filter_choose_date_from_tap_to_select_hint">Нажмите, чтобы выбрать</string>
    <string name="dialogfragment_main_bill_purchase_filter_choose_date_to_title">Выбор конец даты фильтрации</string>
    <string name="dialogfragment_main_bill_purchase_filter_choose_date_to_tap_to_select_hint">Нажмите, чтобы выбрать</string>
    <string name="dialogfragment_main_bill_purchase_filter_start_from_date_holder">Начать с %1$s</string>
    <string name="dialogfragment_main_bill_purchase_filter_end_to_date_holder">Завершить к %1$s</string>
    <string name="dialogfragment_main_preferences_old_password_empty">Пожалуйста введите текущий пароль</string>
    <string name="dialogfragment_main_preferences_new_password_empty">Пожалуйста введите новый пароль</string>
    <string name="fragment_main_bill_input_phonenumber_hint">Номер телефона</string>
    <string name="fragment_main_bill_input_sum_hint">Сумма</string>
    <string name="fragment_main_bill_comment_hint">Комментарий</string>
    <string name="fragment_main_bill_send_request_button_title">Отправить запрос</string>
    <string name="fragment_main_bill_generate_qrcode_title">Сгенерировать QR-код</string>
    <string name="fragment_main_bill_generate_ndefmessage_title">Отправить данные по NFC</string>
    <string name="fragment_change_password_input_old_password_hint">Текущий пароль</string>
    <string name="fragment_change_password_input_new_password_hint">Новый пароль</string>
    <string name="fragment_change_password_input_confirm_new_password_hint">Повторите новый пароль</string>
    <string name="fragment_change_password_change_password_button_hint">Изменить пароль</string>
    <string name="menu_item_bottomnavigationview_settings">Настройки</string>
    <string name="menu_item_bottomnavigationview_bill_title">Выставить</string>
    <string name="menu_item_bottomnavigationview_purchase_title">Оплата</string>
    <string name="menu_item_bottomnavigationview_history_title">История</string>
    <string name="name_of_phone_support">Телефон службы поддержки</string>
    <string name="_998_71_207_80_80">+998 71 207 80 80</string>
    <string name="version_number">Версия:1.1.0</string>
</resources>