<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/action_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="?dialogPreferredPadding"
            android:paddingBottom="12dp"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            tools:ignore="UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_change_password_login_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/fragment_change_password_input_old_password_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_change_password_password_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?dialogPreferredPadding"
                android:layout_marginBottom="3dp"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/fragment_change_password_input_new_password_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_change_password_confirm_password_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                app:passwordToggleEnabled="false"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/fragment_change_password_input_confirm_new_password_hint"/>

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="25dp"
        android:paddingBottom="20dp"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_change_password"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            style="@style/Ui.Button"
            android:text="@string/fragment_change_password_change_password_button_hint"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>